# origami-jsynth

./: .gitignore  README.md  pyproject.toml  sky-dev.yaml
configs/: adult.yaml  ddxplus.yaml  diabetes.yaml  diagnostic.yaml  electric_vehicles.yaml  github_issues.yaml  yelp.yaml
docs/: experiments.md  model_details.md  models.md
notebooks/: array_length_ablation.ipynb  dataset_stats.ipynb  kde_electric_vehicles.ipynb  kvpe_ablation.ipynb  origami_flat_ablation.ipynb  shuffle_keys_ablation.ipynb  yelp_array_length.ipynb
origami_jsynth/: _logging.py  cli.py  data.py  eval.py  registry.py  sample.py  suite.py  sync.py  train.py
origami_jsynth/baselines/: __init__.py  _preprocessing.py  _timeout.py  ctgan.py  great.py  mostlyai.py  realtabformer.py  tabdiff.py  tvae.py
origami_jsynth/evaluation/: __init__.py  detection.py  evaluate.py  fidelity.py  flatten.py  privacy.py  shared.py  type_separation.py  utility.py
scripts/: diagnostic.py  eval_checkpoint.py  generate_latex_tables.py  hf_dataset_card.md  monitor.py  recover_mostlyai_checkpoint.py  upload_to_hf.py
tests/: conftest.py  test_diagnostic.py  test_evaluation_metrics.py  test_flatten.py  test_integration.py  test_logging.py  test_preprocessing.py  test_shared.py  test_suite.py  test_tabdiff_checkpoint.py  test_type_separation.py
yanex/: data.py  data_flat.py  eval.py  sample.py  train.py
