[project]
name = "origami-jsynth"
version = "0.2.0"
description = "Minimal reproduction package for Origami tabular/JSON synthesis experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3,<3",
    "scikit-learn>=1.8",
    "scipy>=1.14",
    "xgboost>=3.1",
    "numba>=0.63",
    "huggingface-hub>=0.20",
    "pyyaml>=6.0",
    "nbformat>=4.2.0",
    "itables>=2.7.0",
    "origami-ml==2.0.0a13",
    "sdmetrics>=0.27.1",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
wandb = ["wandb"]
baselines = [
    "sdv>=1.0",
    "be-great>=0.0.5",
    "realtabformer>=0.1",
    "transformers>=4.46,<5",
    "mostlyai-engine",
    # TabDiff deps (vendored source in vendor/tabdiff/, included via hatch build config)
    "category_encoders",
    "imbalanced-learn",
    "tomli>=2.0",
    "tomli-w",
    "tqdm",
]

[project.scripts]
origami-jsynth = "origami_jsynth.cli:main"

[dependency-groups]
dev = ["ruff>=0.9", "pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (skip unless --run-slow is passed)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["origami_jsynth", "vendor/tabdiff/tabdiff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM105"]
