[project]
name = "origami-jsynth"
version = "0.2.0"
description = "Minimal reproduction package for Origami tabular/JSON synthesis experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3,<3",
    "scikit-learn>=1.8",
    "scipy>=1.14",
    "xgboost>=3.1",
    "numba>=0.63",
    "huggingface-hub>=0.20",
    "pyyaml>=6.0",
    "nbformat>=4.2.0",
    "itables>=2.7.0",
    "torch>=2.11",
    "origami-ml==2.0.0a14",
    "sdmetrics>=0.27.1",
]

[project.optional-dependencies]
wandb = ["wandb"]
yanex = ["yanex"]
baselines = [
    "sdv>=1.0",
    "be-great>=0.0.5",
    "realtabformer>=0.1",
    "transformers>=4.46,<5",
    "mostlyai-engine",
    # TabDiff deps (vendored source in vendor/tabdiff/, included via hatch build config)
    "category_encoders",
    "imbalanced-learn",
    "tomli>=2.0",
    "tomli-w",
    "tqdm",
]

[project.scripts]
origami-jsynth = "origami_jsynth.cli:main"

[dependency-groups]
dev = ["ruff>=0.9", "pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (skip unless --run-slow is passed)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["origami_jsynth", "vendor/tabdiff/tabdiff"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
# mostlyai-engine declares torch<2.10 but works fine at runtime with newer versions.
# Override to allow torch 2.11 which has Blackwell/aarch64 CUDA improvements.
override-dependencies = ["torch>=2.11"]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.sources]
# PyPI has no aarch64 CUDA wheel for torch; use the cu130 index instead.
# The system NCCL must not be present — torch 2.11 bundles its own NCCL.
# x86_64 Linux and macOS fall through to PyPI.
torch = [
    { index = "pytorch-cu130", marker = "platform_machine == 'aarch64' and sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM105"]
